esp_node/build/log/idf_py_stdout_output_108352
[1/15] Performing build step for 'bootloader'
[1/1] cd /home/fracchio/Thesis_project_node_side/esp_node/build/bootloader/esp-idf/esptool_py && /home/fracchio/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/fracchio/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/fracchio/Thesis_project_node_side/esp_node/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/13] Linking C static library esp-idf/wifi/libwifi.a
[3/13] Building CXX object esp-idf/mqtts/CMakeFiles/__idf_mqtts.dir/mqtt_wrapper.cpp.obj
FAILED: esp-idf/mqtts/CMakeFiles/__idf_mqtts.dir/mqtt_wrapper.cpp.obj 
/home/fracchio/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.2\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/fracchio/Thesis_project_node_side/esp_node/build/config -I/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts -I/home/fracchio/esp/esp-idf/components/newlib/platform_include -I/home/fracchio/esp/esp-idf/components/freertos/config/include -I/home/fracchio/esp/esp-idf/components/freertos/config/include/freertos -I/home/fracchio/esp/esp-idf/components/freertos/config/xtensa/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/fracchio/esp/esp-idf/components/freertos/esp_additions/include -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include/soc -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/fracchio/esp/esp-idf/components/heap/include -I/home/fracchio/esp/esp-idf/components/log/include -I/home/fracchio/esp/esp-idf/components/soc/include -I/home/fracchio/esp/esp-idf/components/soc/esp32s3 -I/home/fracchio/esp/esp-idf/components/soc/esp32s3/include -I/home/fracchio/esp/esp-idf/components/hal/platform_port/include -I/home/fracchio/esp/esp-idf/components/hal/esp32s3/include -I/home/fracchio/esp/esp-idf/components/hal/include -I/home/fracchio/esp/esp-idf/components/esp_rom/include -I/home/fracchio/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_rom/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_common/include -I/home/fracchio/esp/esp-idf/components/esp_system/include -I/home/fracchio/esp/esp-idf/components/esp_system/port/soc -I/home/fracchio/esp/esp-idf/components/esp_system/port/include/private -I/home/fracchio/esp/esp-idf/components/xtensa/esp32s3/include -I/home/fracchio/esp/esp-idf/components/xtensa/include -I/home/fracchio/esp/esp-idf/components/xtensa/deprecated_include -I/home/fracchio/esp/esp-idf/components/lwip/include -I/home/fracchio/esp/esp-idf/components/lwip/include/apps -I/home/fracchio/esp/esp-idf/components/lwip/include/apps/sntp -I/home/fracchio/esp/esp-idf/components/lwip/lwip/src/include -I/home/fracchio/esp/esp-idf/components/lwip/port/include -I/home/fracchio/esp/esp-idf/components/lwip/port/freertos/include -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/fracchio/esp/esp-idf/components/esp_event/include -I/home/fracchio/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/fracchio/esp/esp-idf/components/tcp_transport/include -I/home/fracchio/esp/esp-idf/components/esp-tls -I/home/fracchio/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/fracchio/esp/esp-idf/components/mbedtls/port/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/fracchio/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/fracchio/esp/esp-idf/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/fracchio/Thesis_project_node_side/esp_node=. -fmacro-prefix-map=/home/fracchio/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -fno-rtti -MD -MT esp-idf/mqtts/CMakeFiles/__idf_mqtts.dir/mqtt_wrapper.cpp.obj -MF esp-idf/mqtts/CMakeFiles/__idf_mqtts.dir/mqtt_wrapper.cpp.obj.d -o esp-idf/mqtts/CMakeFiles/__idf_mqtts.dir/mqtt_wrapper.cpp.obj -c /home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp
In file included from /home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:1:
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.hpp:32:2: error: expected ';' after class definition
   32 | }
      |  ^
      |  ;
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp: In function 'void mqtt_event_handler(void*, esp_event_base_t, int32_t, void*)':
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:48:37: error: invalid conversion from 'void*' to 'esp_mqtt_event_handle_t' {aka 'esp_mqtt_event_t*'} [-fpermissive]
   48 |     esp_mqtt_event_handle_t event = event_data;
      |                                     ^~~~~~~~~~
      |                                     |
      |                                     void*
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:56:55: error: invalid operands of types 'const char [2]' and 'char [13]' to binary 'operator+'
   56 |         msg_id = esp_mqtt_client_subscribe(client, "/"+instance->_client_id+"/downlink", 1);
      |                                                    ~~~^~~~~~~~~~~~~~~~~~~~~
      |                                                    |             |
      |                                                    |             char [13]
      |                                                    const char [2]
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp: In member function 'void MqttWrapper::mqtt_app_start()':
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:129:13: error: expected primary-expression before '.' token
  129 |             .address.uri = CONFIG_BROKER_URI,
      |             ^
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:130:13: error: expected primary-expression before '.' token
  130 |             .verification.certificate = (const char *)emqxsl_ca_crt_start
      |             ^
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:132:9: error: either all initializer clauses should be designated or none of them should be
  132 |         credentials = {
      |         ^~~~~~~~~~~
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:132:9: error: 'credentials' was not declared in this scope
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:135:13: error: either all initializer clauses should be designated or none of them should be
  135 |             .authentication.password = CONFIG_BROKER_PASSWORD
      |             ^
/home/fracchio/Thesis_project_node_side/esp_node/components/mqtts/mqtt_wrapper.cpp:135:13: error: expected primary-expression before '.' token
ninja: build stopped: subcommand failed.
